--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="preview-container">
           <div class="preview-heading">👀 Preview :</div>
           <div class="preview-video">
-            <video id="video" height="360" width="640"></video>
+            <video id="video" w></video>
           </div>
         </div>
         <div class="start-container">
